# winresult

./: .gitattributes  .gitignore  Cargo.toml  Readme.md
crates/winerr/: Cargo.toml  Readme.md
crates/winerr-core/: Cargo.toml
crates/winerr-core/src/: _core.rs
crates/winerr/doc/: ept-and-rpc-codes-are-evil.md  intro.md
crates/winerr/examples/: example.rs
crates/winerr/src/: _lib.rs  errors.natvis
crates/winerr/src/hresult/: extra.facilities.rs
crates/winresult/: Cargo.toml  Readme.md
crates/winresult-core/: Cargo.toml
crates/winresult-core/src/: _core.rs  hresult.rs  unions.rs  wait.rs
crates/winresult-types/: Cargo.toml
crates/winresult-types/src/: _types.rs  code.rs  debug.rs  hresult.rs  ntstatus.rs  unions.rs  wait.rs
crates/winresult/doc/: changelog.md  ept-and-rpc-codes-are-evil.md  intro.md  type-ranges.md
crates/winresult/examples/: example.rs
crates/winresult/src/: _lib.rs  errors.natvis
crates/winresult/src/hresult/: winerror.facilities.rs
crates/winresult/src/ntstatus/: facilities.rs
crates/xtask/: Cargo.toml
