# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "winerr-core"
description                             = "windows error codes"
version                                 = "0.0.0-git-core"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
license                                 = "Apache-2.0 OR MIT"

[package.metadata.docs.rs]
all-features                            = true
default-target                          = "x86_64-pc-windows-msvc"

[lib]
path                                    = "src/_core.rs"

[dependencies]
bytemuck.version                        = "1"
bytemuck.features                       = ["derive"]
