# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "winerr"
description                             = "windows error codes"
version                                 = "0.0.0-git-lib"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
license                                 = "Apache-2.0 OR MIT"

[package.metadata.docs.rs]
all-features                            = true
default-target                          = "x86_64-pc-windows-msvc"

[lib]
path                                    = "src/_lib.rs"

[dependencies]
winerr-core.path                        = "../winerr-core"
winerr-core.version                     = "0.0.0-git-core"
