# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/category_slugs

[package]
name                                    = "winerr"
description                             = "windows error codes"
version                                 = "0.0.0-git-lib"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/winerr"
documentation                           = "https://docs.rs/winerr"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
keywords                                = ["win32", "error", "hresult", "natvis"]
categories                              = ["os::windows-apis"]

[package.metadata.docs.rs]
all-features                            = true
default-target                          = "x86_64-pc-windows-msvc"

[lib]
path                                    = "src/_lib.rs"

[dependencies]
winerr-core.path                        = "../winerr-core"
winerr-core.version                     = "0.0.0-git-core"
