# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/category_slugs

[package]
name                                    = "winresult-types"
description                             = "windows result types"
version                                 = "0.1.3" # DON'T FORGET TO UPDATE CHANGELOG
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/winresult"
documentation                           = "https://docs.rs/winresult" # re-exports everything anyways, just point at that
license                                 = "Apache-2.0 OR MIT"
# readme                                = "Readme.md"
# keywords                              = ["win32", "error", "hresult", "ntstatus", "natvis"]
# categories                            = ["os::windows-apis"]

[package.metadata.docs.rs]
all-features                            = true
default-target                          = "x86_64-pc-windows-msvc"

[lib]
path                                    = "src/_types.rs"

[dependencies]
bytemuck.version                        = "1"
bytemuck.features                       = ["derive"]
