# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/category_slugs

[package]
name                                    = "winresult"
description                             = "windows result codes"
version                                 = "0.0.0-git-lib"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/winresult"
documentation                           = "https://docs.rs/winresult"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
keywords                                = ["win32", "error", "hresult", "ntstatus", "natvis"]
categories                              = ["os::windows-apis"]

[package.metadata.docs.rs]
all-features                            = true
default-target                          = "x86_64-pc-windows-msvc"

[lib]
path                                    = "src/_lib.rs"

[dependencies]
winresult-types.path                    = "../winresult-types"
winresult-types.version                 = "0.0.0-git-types"
